packages/next-swc/crates/core/tests/errors/next-font-downloaders/not-ident/output.js
import '@next/google-fonts?{"font":"Inter","variant":"400"}';
import '@next/google-fonts?{"font":"Inter","variant":"400"}';
let d;
const { e  } = {};
